fix popup appear on load and fix form redirection route

--- a/openag_pio/data/style.css
+++ b/openag_pio/data/style.css
@@ -143,7 +143,7 @@ body {
 }
 
 .form-popup {
-    display: flex;
+    display: none;
     position: fixed;
     justify-content: center;
     align-items: center;
